fix app-store badges alignment on mobile

--- a/app/assets/stylesheets/mailer.css
+++ b/app/assets/stylesheets/mailer.css
@@ -280,6 +280,7 @@ hr {
 }
 
 .store-badge a {
+  display: inline-block;
   padding: 0 5px;
   text-decoration: none;
 }
